--- a/templates/reader.html
+++ b/templates/reader.html
@@ -72,6 +72,10 @@
     <!-- Translation Toolbar -->
     <div class="translate-toolbar">
         <div class="toolbar-row">
+            <select class="provider-select" id="providerSelect" title="Translation Provider">
+                <option value="zai">🤖 Z.ai</option>
+                <option value="google">🌐 Google</option>
+            </select>
             <select class="lang-select" id="targetLang" title="Target Language">
                 <option value="id">🇮🇩 ID</option>
                 <option value="en">🇬🇧 EN</option>
